# sma-platform

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  COMMERCIAL-LICENSE.md  README.md  main.py  pyproject.toml
data/: chembl_limk2_bioactivity.json  opentargets_summary.md  opentargets_validation.json  pocket_results.json  security-audit.md  transport_vulnerability_model.json
db/: schema.sql  schema_sqlite.sql
docs/: EXPLORATORY-BACKEND-ROADMAP.md  FINDINGS-2026-03-21.md  METHODOLOGY.md  MILESTONES_ROADMAP.md  NIM-MCP-SKILLS-PLAN.md  REPRODUCIBILITY.md  RESEARCH-AGENT-PLAN.md  ROADMAP.md  SMA_Research_Platform.pptx  SMA_Research_Platform_Praesentation.html  VISION.md  actin-pathway-disruption-map.md  analysis-diffdock-v2-378-dockings.md  cfl2-overlooked-target.md  combinatorial-therapy-plan.md  coro1c-activator-candidates.md  coro1c-cross-disease-analysis.md  coro1c-double-hit-model.md  coro1c-rtpcr-primers.md  deploy-checklist-2026-03-24.md  email_professor.md  evidence-gap-map.md  generate_pptx.py  gse290979-coro1c-organoid.md  meeting-prep-simon-march30.md  mir133a-coro1c-therapeutic.md  next-milestones-march-2026.md  outreach-emails-draft.md  pfn1-sma-als-convergence.md  preprint-4ap-smn2-outline.md  preprint_draft.md  presentation-simon-march30.html  research_validation_plan.md  scientific-advisory-pack.md  uba1-therapeutic-axis.md
frontend/: index.html  links.html  llms.txt  robots.txt  sitemap.xml
mcp_server/: server.py
notebooks/: diffdock_limk2_rock2_analysis.ipynb  gse208629_sma_single_cell.ipynb  gse287257_als_single_cell.ipynb  (+1 more)
scripts/: init_db.py  (+46 more)
(+435 files in other folders)
